--- a/ImageProcessing/Base.lproj/Main.storyboard
+++ b/ImageProcessing/Base.lproj/Main.storyboard
@@ -5,36 +5,26 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--My View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MBEViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MyViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yzn-k9-m6l"/>
                         <viewControllerLayoutGuide type="bottom" id="HyD-Ea-IvX"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="TM9-gU-2QB">
+                    <view key="view" contentMode="scaleToFill" id="TM9-gU-2QB" customClass="AAPLView">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l8S-49-GLl">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                            </imageView>
                             <view opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nuP-a7-ka1" userLabel="Control Container View">
                                 <rect key="frame" x="150" y="471" width="300" height="109"/>
                                 <subviews>
-                                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="500" translatesAutoresizingMaskIntoConstraints="NO" id="QrP-Pi-JDm">
+                                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="150" minValue="2" maxValue="500" translatesAutoresizingMaskIntoConstraints="NO" id="QrP-Pi-JDm">
                                         <rect key="frame" x="97" y="-5" width="197" height="31"/>
-                                        <connections>
-                                            <action selector="blurRadiusDidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="DMK-cl-UWW"/>
-                                        </connections>
                                     </slider>
                                     <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="500" translatesAutoresizingMaskIntoConstraints="NO" id="ta5-TH-g7W">
                                         <rect key="frame" x="97" y="28" width="197" height="31"/>
-                                        <connections>
-                                            <action selector="blurRadiusDidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="ao8-r4-Zxu"/>
-                                            <action selector="saturationDidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="BjW-wt-RVg"/>
-                                        </connections>
                                     </slider>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="x" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yRI-WM-XcY">
                                         <rect key="frame" x="8" y="32" width="83" height="21"/>
@@ -50,9 +40,6 @@
                                     </label>
                                     <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="500" translatesAutoresizingMaskIntoConstraints="NO" id="UR5-54-IYi">
                                         <rect key="frame" x="97" y="61" width="197" height="31"/>
-                                        <connections>
-                                            <action selector="saturationDidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="n7K-sK-veB"/>
-                                        </connections>
                                     </slider>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="y" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G3l-xj-zxR">
                                         <rect key="frame" x="8" y="65" width="83" height="21"/>
@@ -72,18 +59,13 @@
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="nuP-a7-ka1" secondAttribute="centerX" id="6cI-eI-1cd"/>
                             <constraint firstItem="HyD-Ea-IvX" firstAttribute="top" secondItem="nuP-a7-ka1" secondAttribute="bottom" constant="20" id="cBk-ac-tZI"/>
-                            <constraint firstItem="l8S-49-GLl" firstAttribute="leading" secondItem="TM9-gU-2QB" secondAttribute="leading" id="fPW-Um-Nu3"/>
-                            <constraint firstItem="l8S-49-GLl" firstAttribute="top" secondItem="TM9-gU-2QB" secondAttribute="top" id="jrI-xB-kNp"/>
-                            <constraint firstAttribute="trailing" secondItem="l8S-49-GLl" secondAttribute="trailing" id="pw4-aR-9Fq"/>
-                            <constraint firstItem="l8S-49-GLl" firstAttribute="bottom" secondItem="HyD-Ea-IvX" secondAttribute="top" id="vQ9-bn-hsn"/>
                         </constraints>
                     </view>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <connections>
-                        <outlet property="blurRadiusSlider" destination="QrP-Pi-JDm" id="MGN-7I-KTv"/>
-                        <outlet property="imageView" destination="l8S-49-GLl" id="VK7-7f-Jax"/>
-                        <outlet property="saturationSlider" destination="ta5-TH-g7W" id="dKh-co-Lnt"/>
-                        <outlet property="ySlider" destination="UR5-54-IYi" id="zhm-M7-b3l"/>
+                        <outlet property="blurRadiusSlider" destination="QrP-Pi-JDm" id="dhT-r6-O9T"/>
+                        <outlet property="xSlider" destination="ta5-TH-g7W" id="06b-iS-qLC"/>
+                        <outlet property="ySlider" destination="UR5-54-IYi" id="71p-V1-5p8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
